--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <video src="images/Laptop - 1657.mp4" muted loop autoplay></video>
     <header class="header">
-      <h1 class="nani">NANI</h1>
+      <h1 class="nani"></h1>
       <nav>
         <ul class="main-nav">
           <li><a href="#" class="main-nav-link">Home</a></li>
